brat/test/golden/error/fanin-diff-types.brat.golden
Error in test/golden/error/fanin-diff-types.brat@2:5
f = { [\/] }
    ^^^^^^^^

  Type mismatch when checking [\/]
Expected: Qubit
But got:  Bit


